2024-10-11T00:53:00Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11284357628 # 445
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-11
* notice: last 14d: unq all: 2 3
* notice: prev accum: outdated-unq outdated-all / unq all: 857 1332 / 861 1336
* notice: next accum: outdated-unq outdated-all / unq all: 858 1333 / 861 1336
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-09-26] / []

2024-10-07T00:55:08Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11206725913 # 441
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-07
* notice: last 14d: unq all: 2 4
* notice: prev accum: outdated-unq outdated-all / unq all: 856 1331 / 861 1336
* notice: next accum: outdated-unq outdated-all / unq all: 857 1332 / 861 1336
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-09-22] / []

2024-10-06T00:57:12Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11197652543 # 440
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-06
* notice: last 14d: unq all: 2 5
* notice: prev accum: outdated-unq outdated-all / unq all: 855 1330 / 861 1336
* notice: next accum: outdated-unq outdated-all / unq all: 856 1331 / 861 1336
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-09-21] / []

2024-10-05T00:52:25Z: