@@ -1,3 +1,12 @@
+2024-10-14T00:54:57Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11319200086 # 448
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-14
+* notice: last 14d: unq all: 3 4
+* notice: prev accum: outdated-unq outdated-all / unq all: 858 1333 / 861 1336
+* notice: next accum: outdated-unq outdated-all / unq all: 858 1333 / 862 1337
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-10-13]
+
 2024-10-11T00:53:00Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11284357628 # 445
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-10-11
